# bids-website

./: .all-contributorsrc  .codespellrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .remarkignore  .remarkrc  2017-11-11-The-Brain-Imaging-Data-Structure-(BIDS)-Specification.md  404.html  BIDS README.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  Makefile  README.md  _config.yml  acknowledgments.html  benefits.html  bep001.html  bep002.html  bep003.html  bep004.html  bep005.html  bep006.html  bep007.html  bep008.html  bep009.html  bep010.html  bep011.html  bep012.html  bep013.html  bep014.html  bep015.html  bep016.html  bep017.html  bep018.html  (+52 more)
.circleci/: artifact_path  config.yml
.faq/: FAQ.md
.github/: dependabot.yml
_bep_collection/: bep001.md  bep002.md  bep003.md  bep004.md  bep005.md  bep006.md  bep007.md  bep008.md  bep009.md  bep010.md  bep011.md  bep012.md  bep013.md  bep014.md  bep015.md  bep016.md  bep017.md  bep018.md  bep019.md  bep020.md  bep021.md  bep022.md  bep023.md  bep024.md  bep025.md  bep026.md  bep027.md  bep028.md  bep029.md  bep030.md  bep031.md  bep032.md  bep035.md  bep037.md  bep039.md  bep040.md  bep042.md  bep043.md  bep044.md
_data/: MEEG_converters.yml  advisory.yml  beps.yml  beps_completed.yml  beps_other.yml  converters.yml  from_BIDS_converters.yml  institution_converters.yml  maintainers.yml  navigation.yaml  other_converters.yml  past_steering.yml  physio_converters.yml  steering.yml  tools.yml
_includes/: beps_completed_table.html  beps_others_table.html  beps_table.html  converters_table.html  list_tools.html  members_table.html  navbar.html  steering_group_election_section.html  tracking.html
_layouts/: default.html  index.html
_pages/: BIDS.md  COLLAB.md  SPECS.md  TEAM.md  TOOLS.md  acknowledgements.md  acknowledgments.md  benefits.md  bep_guide.md  bep_submission_process.md  bids_timeline.html  code_of_conduct.md  get_involved.md  get_started.md  getting_started.md  governance.md  index.md  news.md  specification.md
_posts/: 2019-10-22-voting-results.md  2019-12-14-new_website.md  2019-12-19-new_website.md  2019-12-31-meet-the-bids-steering-group.md  2020-01-02-announcement-community-forum-events.md  2020-03-12-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-03-20-Engage with the BIDS ecosystem.md  2020-03-20-engage-with-the-bids-ecosystem.md  2020-03-23-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-03-30-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-04-15-v1.3.0-release-next-focus.md  2020-04-16-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-05-07-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-05-25-BIDS-Derivatives-final-request-for-comments.md  2020-05-28-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-06-12-BIDS-specification-v1.4.0-released.md  2020-06-18-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-06-19-BIDS-OHBM-OSR-2020.md  2020-06-24-Join-the-BIDS-community-on-the-BrainHack-Mattermost.md  2020-07-09-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-07-30-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-08-20-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-09-15-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-10-22-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-11-02-BIDS-ASL-community-review.md  2020-11-12-Steering-Group-executive-summary,-action-items,-and-minutes.md  2020-12-03-Steering-Group-executive-summary,-action-items,-and-minutes.md  2021-01-11-BIDS-PET-community-review.md  2021-01-14-Steering-Group-executive-summary,-action-items,-and-minutes.md  2021-02-04-Steering-Group-executive-summary,-action-items,-and-minutes.md  2021-02-25-Steering-Group-executive-summary,-action-items,-and-minutes.md  2021-03-18-Steering-Group-executive-summary,-action-items,-and-minutes.md  2021-04-08-Steering-Group-executive-summary,-action-items,-and-minutes.md  2021-04-29-Steering-Group-executive-summary,-action-items,-and-minutes.md  2021-05-20-Steering-Group-minutes.md  2021-06-10-Steering-Group-minutes.md  2021-06-15-BIDS-Town-Hall-2021.md  2021-07-01-Steering-Group-minutes.md  2021-08-12-Steering-Group-minutes.md  2021-09-02-Steering-Group-minutes.md  (+44 more)
_redirects/: starter-kit.md
_sass/: custom.scss  jekyll-theme-cayman.scss  variables.scss
bep001/: index.html
bep004/: index.html
bep007/: index.html
bep008/: index.html
bep009/: index.html
bep011/: index.html
bep012/: index.html
bep013/: index.html
bep014/: index.html
bep015/: index.html
bep016/: index.html
bep017/: index.html
bep018/: index.html
bep019/: index.html
bep021/: index.html
bep023/: index.html
bep024/: index.html
bep025/: index.html
bep026/: index.html
bep027/: index.html
bep028/: index.html
bep029/: index.html
bep032/: index.html
bep033/: index.html
bep034/: index.html
bep035/: index.html
tools/: MRIQC_WepAPI_analysis.py  Makefile  README.md  bep_gant_chart.py  bep_gantt_html_create.py  bep_gantt_mermaid_insert.py  bids-apps.html  convert_posts.py  convert_to_md.py  convert_to_md.sh  converters.html  count_citation.py  data_openneuro.py  figure_data_mriqc.py  figure_data_openneuro.py  guess_gender_contributors.py  index.html  insert_mermaid_bep_gantt.py  list_bep_leads.py  locate_affiliations.py  maintainers_report.py  mkqrcode.py  mkqrcode_bids  neurostars.py  no-bad-latin.py  others.html  plot_google_citations.py  print_filename_templates.py  pyproject.toml  requirements.txt  timeline.csv  transfer_contributors.py  utils.py  validator.html
tools/bids_website/: utils.py
tools/ci/: README.md  no-bad-latin.py  pull_files.py  validate_apps.py  validate_people.py
tools/maintenance/: list_bep_leads.py  list_bep_leads_gh.py  maintainers_report.py  neurostars.py  utils.py  validate_converters.py
tools/tests/: test_bep_redirects_hook.py  test_count_citation.py  test_plotting.py  test_utils.py
(+824 files in other folders)
