[project]
name = "bids_website_meta"
version = "0.1.0"
description = "Sources for the BIDS standard website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.7.4",
    "gender_guesser",
    "geopy",
    "jinja2>=3.1.5",
    "markdown-it-py",
    "mkdocs-material[imaging]",
    "mkdocs-macros-plugin",
    "mkdocs-open-in-new-tab",
    "mkdocs-redirects",
    "mkdocs-rss-plugin",
    "plotly>=5.3.1",
    "pybids",
    "pyzotero",
    "rich",
    "ruamel.yaml",
    "tabulate",
    "urllib3>=2.2.2",
    "bidsschematools[render]",
    "bids_website",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
]

[tool.uv.sources]
bids_website = {workspace = true}

[tool.uv.workspace]
members = ["tools"]

[tool.codespell]
builtin = "clear,rare,en-GB_to_en-US"
ignore-words-list = "Acknowledgements,als,ans,asai,nd,manuel,te,acknowledgements,Varian,mis"
skip = ".git,env,specification,starter_kit,examples,apps,execution,pyproject.toml,data/**.tsv,data/**.json,docs/collaboration/contributors.md,package-lock.json"

[tool.djlint]
profile = "django"
blank_line_after_tag = "load,extends,include,endblock,set"
blank_line_before_tag = "load,extends,include,block,set"
format_css = true
ignore = "H030,H031,H021,H006"
max_line_length = 79
use_gitignore = true

[tool.djlint.css]
indent_size = 4

[tool.ruff]
extend-exclude = ["data/datasets/examples", "nilearn/_version.py"]
include = [
    "pyproject.toml",
    "macros/**/*.py",
    "tools/**/*.py",
]
indent-width = 4
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = [
    "ARG005",
    "D100",
    "D103",
    "D104",
    "D105",
    "D205",
    "D404",
    "E501",
    "E741",
    "ERA001",
    "N803",
    "N806",
    "PTH123",
    "PERF401",
    "PLR2004",
    "PTH100",
    "PTH120",
    "PTH207",
    "PTH118",
    # Avoid linter rules conflicting with the formatter
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",
    "COM819",
    "E111",
    "E114",
    "E117",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "ARG",
    "B",
    "C4",
    "C90",
    "D",
    "E",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PTH",
    "PD",
    "PGH",
    "PLR",
    "RUF",
    "SIM",
    "UP",
    "W",
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"**/{doc}/*" = ["B018", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-args
max-args = 15
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-branches
max-branches = 15
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-returns
max-returns = 5
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-statements
max-statements = 100
